<resources>
    <string name="app_names">士加堡民宿</string>

    <string name="item_fragment_home_header_search">搜索民宿</string>
    <string name="item_fragment_home_header_hot">热门民宿</string>
    <string name="item_fragment_home_header_active">活跃房客</string>
    <string name="item_fragment_home_header_travel">精彩游记</string>
    <string name="item_fragment_home_header_share">分享民宿</string>

    <string name="home_image_share_minsu">分享民宿</string>
    <string name="home_image_share_cancel">取消</string>
    <string name="home_image_share_see">预览</string>
    <string name="home_image_share_name">名称描述</string>
    <string name="home_image_share_type">民宿类型</string>
    <string name="home_image_share_price">最低价格</string>
    <string name="home_image_share_phone">预定电话</string>
    <string name="home_image_share_address">详细地址</string>
    <string name="home_image_share_immediately">立即分享</string>

    <string name="home_item_lv_money">764</string>
    <string name="home_item_lv_title_text">花盛美地度假屋</string>
    <string name="home_item_lv_text">唯美度假城堡，在烂漫的树上泡温泉</string>
    <string name="home_item_lv_locate_city">三亚</string>
    <string name="home_item_lv_integral">9.0分</string>
    <string name="home_item_lv_common">23评论</string>

    <string name="settlement_header_locate_city">广州</string>
    <string name="settlement_header_all_city">全部城市> </string>
    <string name="settlement_header_hot_city">热门城市 >>> </string>

    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">搜索民宿、目的地</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>


    <string name="cancel">取消</string>
    <string name="publish_empty_text">想说什么…</string>
    <string name="take_photo">拍照</string>
    <string name="select_from_local">从相册中选取</string>


    <string name="share_sdk">Share SDK</string>
    <string name="login_with_wechat">用微信登录</string>
    <string name="login_with_qzone">用QQ空间登录</string>
    <string name="login_with_other_plat">其他帐号登录</string>

    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="if_register_needed">如果您需要注册功能…</string>
    <string name="after_auth">一般来说第三方登录时，第三方平台已经为您完成用户身份校验，您可以放心让用户登录。\n\n但如果您需要判断用户是否为新用户，可以在授权操作完成后，将用户的信息通过字段“HashMap userInfo”携带给login方法。客户端通过“String userId”执行登录请求，如果服务端判定此userId为未注册用户，可以将userInfo发送给注册接口，获取用户在此平台上的昵称、头像等数据，然后执行注册</string>
    <string name="ok">确定</string>

</resources>
