<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/home_item_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mask" />

        <LinearLayout
            android:layout_width="105dp"
            android:layout_height="40dp"
            android:layout_gravity="left|bottom"
            android:background="#DD000000"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:text="¥"
                android:textColor="@color/colorAccent"
                android:textSize="22sp" />
            <TextView
                android:id="@+id/home_item_lv_money"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="764"
                android:textColor="@color/colorAccent"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="2dp"
                android:text="起"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/home_item_lv_head"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/home_icon_hothouse"
            app:civ_border_color="#00FFFFFF"
            app:civ_border_width="2dp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/home_item_lv_titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/color_black"
            android:text="@string/home_item_lv_title_text"/>

        <TextView
            android:id="@+id/home_item_lv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/home_item_lv_text"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="26dp"
            android:gravity="center"
            android:background="@drawable/shape_location"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_location"/>
            <TextView
                android:id="@+id/home_item_lv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:textSize="14sp"
                android:text="@string/home_item_lv_locate_city"/>

        </LinearLayout>

        <TextView
            android:id="@+id/home_item_lv_integral"
            android:layout_width="60dp"
            android:layout_height="26dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_fraction"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/home_item_lv_integral"/>

        <TextView
            android:id="@+id/home_item_lv_common"
            android:layout_width="60dp"
            android:layout_height="26dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_comment"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/home_item_lv_common"/>

    </LinearLayout>

</LinearLayout>